This file documents the revision history for mod_gearman.

0.5    ...
          - added worker thresholds to check_gearman
          - added check in configure if users exists
          - changed performance data for check_gearman
          - initscript no uses su -s instead of su
          - added chown of logfile dir to make install

0.4    Sat Sep 25 23:15:26 CEST 2010
          - added gearman_top
          - added version to check_gearman and send_gearman
          - added version to output of worker status
          - added worker name to error output of plugins
          - fixed daemon mode

0.3    Mon Sep 20 09:43:55 CEST 2010
          - added check_gearman to monitor job server and worker
          - added send_gearman to submit passive results
          - fixed make dist

0.2    Tue Sep 14 09:30:31 CEST 2010
          - added support for config files
          - fixed sending perfdata even when disabled by "process_performance_data" setting

0.1    Mon Aug 23 15:01:15 CEST 2010
          - print warning if host/servicegroup does not exist
          - added AES-256 encryption (with base64 transport)
          - added host/servicegroup affinity
          - added exclusion by local host/servicegroups
          - added distribution of eventhandlers
          - added result queue worker
          - initial version